[project]
name = "foldingathome"
version = "0.2.0"
authors = [{ name="Ben Harris", email="benharris2514@gmail.com"}]
description = "API wrapper around Folding@Home's statistics api."
readme = "README.md"
requires-python = ">=3.4"
classifiers=[
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Build Tools",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.4",
    "Programming Language :: Python :: 3.5",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.12",
]
keywords=["API wrapper", "Python", "Folding@Home"]

[project.urls]
Homepage = "https://github.com/leet-hakker/foldingathome"
Issues = "https://github.com/leet-hakker/foldingathome/issues"
